--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kazi's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Kazi's Portfolio</h1>
+    <section id="top-sec">
+        <div id="half">
+            <h1>Welcome to...</h1>
+            <h1><span id="name-color">Mr. Brown Cat's</span>  Portfolio!</h1>
+
+            <h2>Full-time sleeper & Part-time eater.</h2>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi numquam nostrum cupiditate veritatis reiciendis laboriosam eum itaque unde, consequatur optio officiis voluptate ducimus nesciunt quidem dicta aspernatur asperiores quis iste, explicabo accusantium!</p>
+
+            <a id="hire-btn" target="_blank" href="https://github.com/kazisaheb/">Kill Me</a>
+        </div>
+        <div id="half">
+            <img src="https://cdn.pixabay.com/photo/2017/02/15/12/12/cat-2068462__340.jpg" alt="">
+        </div>
+    </section>
+
+
 </body>
 </html>
