--- a/index.html
+++ b/index.html
@@ -28,5 +28,22 @@
     </section>
 
 
+    <section id="sec-two">
+        <div id="half">
+            <img src="https://cdn.pixabay.com/photo/2016/12/18/18/42/kittens-1916542__340.jpg" alt="">
+        </div>
+
+        <div id="half">
+            <h1>Next part of eating is...</h1>
+            <h1><span id="name-color">Mr. Brown Cat</span>  is sleeping!</h1>
+
+            <h2>Full-time sleeper & Part-time eater.</h2>
+
+            <p id="second-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi numquam nostrum cupiditate veritatis reiciendis laboriosam eum itaque unde, consequatur optio officiis voluptate ducimus nesciunt quidem dicta aspernatur asperiores quis iste, explicabo accusantium!</p>
+
+            <a id="hire-btn" target="_blank" href="https://github.com/kazisaheb/">Disturb Me</a>
+        </div>
+    </section>
+
 </body>
 </html>
