--- a/index.html
+++ b/index.html
@@ -45,5 +45,19 @@
         </div>
     </section>
 
+    <h1>My Daily Routine:-</h1>
+    <section>
+        <div id="half" class="shadow">
+            <h1>My Sleeping Schedule</h1>
+            <h2>12AM-12PM | Sleeping</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, quisquam. Dolorem, fugit labore laudantium dolore autem dolor illo dicta aliquam.</p>
+        </div>
+
+        <div id="half" class="shadow">
+            <h1>My Eating Schedule</h1>
+            <h2>12PM-12AM | Eating</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, quisquam. Dolorem, fugit labore laudantium dolore autem dolor illo dicta aliquam.</p>
+        </div>
+    </section>
 </body>
 </html>
