--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <h1>My Daily Routine:-</h1>
-    <section>
+    <section id="sec-three">
         <div id="half" class="shadow">
             <h1>My Sleeping Schedule</h1>
             <h2>12AM-12PM | Sleeping</h2>
