Button links updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           dicta aspernatur asperiores quis iste, explicabo accusantium!
         </p>
 
-        <a id="hire-btn" target="_blank" href="https://github.com/kazisaheb/"
+        <a
+          id="hire-btn"
+          target="_blank"
+          href="https://github.com/kazisaheb/PortfolioOne"
           >Kill Me</a
         >
       </div>
@@ -61,7 +64,10 @@
           dicta aspernatur asperiores quis iste, explicabo accusantium!
         </p>
 
-        <a id="hire-btn" target="_blank" href="https://github.com/kazisaheb/"
+        <a
+          id="hire-btn"
+          target="_blank"
+          href="https://github.com/kazisaheb/PortfolioOne"
           >Disturb Me</a
         >
       </div>
